# viseer

./: .env.example  .gitignore  README.md  docker-compose.yml  install.sh  pyproject.toml
benchmarks/: README.md  __init__.py  runner.py  tasks.json
benchmarks/results/: 2026-04-16-initial.json  2026-04-16-initial.md  2026-04-16-official-source-pass.json  2026-04-16-official-source-pass.md  local-run.json  local-run.md
examples/: README.md  common.py  company_lookup.py  compare_tools.py  fact_check.py  latest_news.py  price_check.py  search_then_fetch.py
searxng/: settings.yml
tests/: test_benchmark_runner.py  test_config.py  test_output_format.py  test_page_fetch.py  test_pipeline.py  test_price_validation.py  test_ranking.py  test_reddit_extractor.py  test_reddit_fetch.py  test_reddit_provider.py  test_rich_output.py  test_structured_recovery.py  test_synthesis.py
websearch_agents/: __init__.py  cli.py  config.py  output_format.py  page_fetch.py  pipeline.py  price_validation.py  ranking.py  rich_output.py  strategies.py  synthesis.py  types.py
websearch_agents/fetch/: __init__.py  browser_fallback.py  http_fetcher.py  reddit.py  reddit_extractor.py  structured_recovery.py  trafilatura_extractor.py
websearch_agents/providers/: __init__.py  base.py  mock.py  reddit.py  searxng.py
websearch_for_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
